--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <option value="StudyPermit" data-en="Study Permit" data-fr="Permis d'études" data-zh="学习许可" data-zh-tw="學習許可">Study Permit</option>
                     <option value="WorkPermit" data-en="Work Permit" data-fr="Permis de travail" data-zh="工作许可" data-zh-tw="工作許可">Work Permit</option>
                     <option value="ExpressEntry" data-en="Permanent residency (Express Entry)" data-fr="Résidence permanente (Entrée express)" data-zh="永久居留（快速通道）" data-zh-tw="永久居留（快速通道）">Permanent residency (Express Entry)</option>
-                    <option value="PNP" data-en="Permanent residency (PNP)" data-fr="Résidence permanente (PPNP)" data-zh="永久居留（省提名计划）" data-zh-tw="永久居留（省提名計劃）">Here is the updated HTML structure with options to toggle between English, French, Chinese (Simplified), and Chinese (Traditional):
+                    <option value="PNP" data-en="Permanent residency (PNP)" data-fr="Résidence permanente (PPNP)" data-zh="永久居留（省提名计划）" data-zh-tw="永久居Here's the corrected HTML structure with options to toggle between English, French, Chinese (Simplified), and Chinese (Traditional), ensuring no text is repeated unnecessarily:
 
 ```html
 <!DOCTYPE html>
@@ -317,3 +317,19 @@
         }
     </script>
 </head>
+<body>
+    <header>
+        <h1 data-en="Share your experience. We are not your spies, because we are humans." 
+            data-fr="Partagez vos expériences. Nous ne sommes pas vos espions, car nous sommes humains." 
+            data-zh="分享您的经历。我们不是间谍，因为我们是人类。" 
+            data-zh-tw="分享您的經歷。我們不是間諜，因為我們是人類。">Share your experience. We are not your spies, because we are humans.</h1>
+        <p data-en="We believe in a just & inclusive Canada more than you, because we believe in a Canada that does not discriminate or profile people based on country of origin."
+            data-fr="Nous croyons en un Canada juste et inclusif plus que vous, car nous croyons en un Canada qui ne discrimine pas ou ne profile pas les gens en fonction de leur pays d'origine."
+            data-zh="我们比你更相信一个公正和包容的加拿大，因为我们相信一个不基于原籍国歧视或定性人的加拿大。"
+            data-zh-tw="我們比你更相信一個公正和包容的加拿大，因為我們相信一個不基於原籍國歧視或定性人的加拿大。">We believe in a just & inclusive Canada more than you, because we believe in a Canada that does not discriminate or profile people based on country of origin.</p>
+        <p data-en="We are more than numbers. We are real people with stories of our dreams and trust in Canada."
+            data-fr="Nous sommes plus que des numéros. Nous sommes de vraies personnes avec des histoires de nos rêves et de notre confiance au Canada."
+            data-zh="我们不仅仅是数字。我们是真实的人，有着我们的梦想和对加拿大的信任的故事。"
+            data-zh-tw="我們不僅僅是數字。我們是真實的人，有著我們的夢想和對加拿大的信任的故事。">We are more than numbers. We are real people with stories of our dreams and trust in Canada.</p>
+    </header>
+
